@@ -685,6 +685,8 @@ typedef FREEBUFFER *LPFREEBUFFER;
 SCODE WINAPI MAPIAllocateBuffer (ULONG, LPVOID FAR *);
 ULONG WINAPI MAPIFreeBuffer (LPVOID);
 
+void    MAPIUninitialize (void);
+HRESULT MAPIInitialize (LPVOID lpMapiInit);  
 
 #if defined (UNICODE)
 HRESULT WINAPI OpenStreamOnFile(LPALLOCATEBUFFER,LPFREEBUFFER,
