@@ -1,3 +1,9 @@
+2005-09-07  Timo Schulz  <ts@g10code.com>
+
+	* olflange.cpp (ul_release): New. Wrapper with error checking
+	around UlRelease.
+	(InstallCommands): Separate test for type and if string is empty.
+	
 2005-09-06  Werner Koch  <wk@g10code.com>
 
 	* engine-gpgme.c (op_decrypt_stream): Factored most code out to ..
